force-app/main/default/objects/City__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongole</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Anna Nagar</fullName>
            </value>
            <value>
                <fullName>Karapakkam</fullName>
            </value>
            <value>
                <fullName>Guindy</fullName>
            </value>
            <value>
                <fullName>BTM</fullName>
            </value>
            <value>
                <fullName>Hebbal</fullName>
            </value>
            <value>
                <fullName>Silkboard</fullName>
            </value>
            <value>
                <fullName>KPHB</fullName>
            </value>
            <value>
                <fullName>Ameerpet</fullName>
            </value>
            <value>
                <fullName>Chintal</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>