force-app/main/default/objects/City__c/fields/Pin__c.field-meta.xml
<CustomField>
    <fullName>Pin__c</fullName>
    <label>Pin</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>